--- a/HumanResource/Pages/Departments.razor
+++ b/HumanResource/Pages/Departments.razor
@@ -28,7 +28,7 @@
                         <td>@department.Description</td>
                         <td>
                             <button class="btn btn-sm btn-info" @onclick="() => ShowEditForm(department)">Edit</button>
-                            <button class="btn btn-sm btn-danger" @onclick="() => DeleteDepartment(department)">Delete</button>
+                            <button class="btn btn-sm btn-danger" @onclick="() => DeleteDepartmentAsync(department)">Delete</button>
                         </td>
                     </tr>
                 }
@@ -48,7 +48,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <HumanResource.Models.DepartmentForm Department="selectedDepartment" OnDepartmentUpdated="UpdateDepartment" OnCancel="HideEditForm" />
+                        <HumanResource.Models.DepartmentForm Department="selectedDepartment" OnDepartmentUpdated="UpdateDepartmentAsync" OnCancel="HideEditForm" />
                     </div>
                 </div>
             </div>
