--- a/HumanResource/Pages/Interns.razor
+++ b/HumanResource/Pages/Interns.razor
@@ -33,7 +33,7 @@
                         <td>@intern.Email</td>
                         <td>
                             <button class="btn btn-sm btn-info" @onclick="() => ShowEditForm(intern)">Edit</button>
-                            <button class="btn btn-sm btn-danger" @onclick="() => DeleteIntern(intern)">Delete</button>
+                            <button class="btn btn-sm btn-danger" @onclick="() => DeleteInternAsync(intern)">Delete</button>
                         </td>
                     </tr>
                 }
@@ -53,7 +53,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <HumanResource.Models.InternForm Intern="selectedIntern" OnInternUpdated="UpdateIntern" OnCancel="HideEditForm" />
+                        <HumanResource.Models.InternForm Intern="selectedIntern" OnInternUpdated="UpdateInternAsync" OnCancel="HideEditForm" />
                     </div>
                 </div>
             </div>
