--- a/CentralServer/Pages/Logging.razor
+++ b/CentralServer/Pages/Logging.razor
@@ -1,6 +1,7 @@
 ﻿@page "/logging"
 @using CentralServer.Data
-
+@using Services
+@inject DataService  DataService
 <h3>Logging Dashboard</h3>
 
 <div style="max-height: 400px; overflow-y: auto;">
@@ -8,9 +9,14 @@
 </div>
 
     @code {
-        private List<LogEntry> logEntries = new()
+        private List<LogEntry> logEntries = new();
+
+        protected override Task OnInitializedAsync()
         {
-            new LogEntry { Timestamp = DateTime.Now, Source = "Finance", Destination = "CentralServer", Type = "SignalR", Status = "Success" },
-            new LogEntry { Timestamp = DateTime.Now.AddMinutes(-5), Source = "HR", Destination = "Finance", Type = "API", Status = "Failed" }
-        };
-    }
+            DataService.AddLogMessage(new LogEntry { Timestamp = DateTime.Now, Source = "Finance", Destination = "CentralServer", Type = "SignalR", Status = "Success" });
+            DataService.AddLogMessage(new LogEntry { Timestamp = DateTime.Now.AddMinutes(-5), Source = "HR", Destination = "Finance", Type = "API", Status = "Failed" });
+
+            logEntries = DataService.GetLogMessages();
+            return base.OnInitializedAsync();
+        }
+}
