minor updates focussing on config files and port mapping issues

--- a/Logistics/Pages/Index.razor
+++ b/Logistics/Pages/Index.razor
@@ -68,6 +68,8 @@
         equipmentDueForService = await GetEquipmentDueForServiceCount();
         totalCostsLastMonth = await GetTotalCostsLastMonth();
         averageFuelConsumption = await GetAverageFuelConsumptionThisWeek();
+        //await commservices.StartConnection();
+
     }
 
     private async Task<int> GetShipmentsInTransitCount()
