--- a/Finance/Shared/NavMenu.razor
+++ b/Finance/Shared/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Profit and Loss Report
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="communication">
+                <span class="oi oi-home" aria-hidden="true"></span> Communication
+            </NavLink>
+        </li>
     </ul>
 </div>
 
