--- a/Logistics/Shared/NavMenu.razor
+++ b/Logistics/Shared/NavMenu.razor
@@ -38,6 +38,11 @@
                 <span class="oi oi-document" aria-hidden="true"></span> Reports
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="communication">
+                <span class="oi oi-document" aria-hidden="true"></span> Communication
+            </NavLink>
+        </li>
     </ul>
 </div>
 
